--- a/.github/actions/versioning/get-version/action.yml
+++ b/.github/actions/versioning/get-version/action.yml
@@ -26,7 +26,8 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Get version from Solution.props
+    - name: Get version from Solution.props (Linux/macOS)
+      if: runner.os != 'Windows'
       id: get-version
       shell: bash
       run: |
@@ -34,7 +35,17 @@ runs:
         echo "Current version: $VERSION"
         echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-    - name: Parse version components
+    - name: Get version from Solution.props (Windows)
+      if: runner.os == 'Windows'
+      id: get-version
+      shell: pwsh
+      run: |
+        $v = (Select-Xml -Path Solution.props -XPath "//SolutionVersion").Node.InnerText
+        Write-Host "Current version: $v"
+        "version=$v" | Out-File -FilePath $Env:GITHUB_OUTPUT -Append -Encoding utf8
+
+    - name: Parse version components (Linux/macOS)
+      if: runner.os != 'Windows'
       id: parse-version
       shell: bash
       run: |
@@ -55,3 +66,24 @@ runs:
           echo "Error: Version format doesn't follow semantic versioning: $VERSION"
           exit 1
         fi
+
+    - name: Parse version components (Windows)
+      if: runner.os == 'Windows'
+      id: parse-version
+      shell: pwsh
+      run: |
+        $VERSION = '${{ steps.get-version.outputs.version }}'
+        if ($VERSION -match '^(\d+)\.(\d+)\.(\d+)(-[A-Za-z0-9]+(\.[0-9]+)?)?$') {
+          $major = $Matches[1]
+          $minor = $Matches[2]
+          $patch = $Matches[3]
+          $suffix = $Matches[4]
+          "major=$major" | Out-File -FilePath $Env:GITHUB_OUTPUT -Append -Encoding utf8
+          "minor=$minor" | Out-File -FilePath $Env:GITHUB_OUTPUT -Append -Encoding utf8
+          "patch=$patch" | Out-File -FilePath $Env:GITHUB_OUTPUT -Append -Encoding utf8
+          "suffix=$suffix" | Out-File -FilePath $Env:GITHUB_OUTPUT -Append -Encoding utf8
+          Write-Host "Parsed version: Major=$major, Minor=$minor, Patch=$patch, Suffix=$suffix"
+        } else {
+          Write-Error "Error: Version format doesn't follow semantic versioning: $VERSION"
+          exit 1
+        }
