--- a/.github/actions/code-style/using-sorter/action.yml
+++ b/.github/actions/code-style/using-sorter/action.yml
@@ -32,13 +32,35 @@ runs:
         dotnet tool install -g dotnet-format || true
         export PATH="$HOME/.dotnet/tools:$PATH"
 
+        # Function to find the nearest project or solution file
+        find_project_file() {
+          local dir="$(dirname "$1")"
+          local project_file
+          
+          while [ "$dir" != "/" ] && [ "$dir" != "." ]; do
+            project_file=$(find "$dir" -maxdepth 1 -type f \( -name '*.csproj' -o -name '*.sln' \) | head -n 1)
+            if [ -n "$project_file" ]; then
+              echo "$project_file"
+              return 0
+            fi
+            dir="$(dirname "$dir")"
+          done
+          return 1
+        }
+
         # Process each file
         for file in $FILES; do
           if [[ -f "$file" ]]; then
+            project_file=$(find_project_file "$file")
+            if [ $? -ne 0 ]; then
+              echo "::warning file=$file::Could not find project or solution file for $file"
+              continue
+            fi
+
             if [[ "${{ inputs.mode }}" == "fix" ]]; then
-              dotnet format analyzers "$file"
+              dotnet format analyzers "$project_file" --include "$file"
             else
-              dotnet format analyzers "$file" --verify-no-changes
+              dotnet format analyzers "$project_file" --include "$file" --verify-no-changes
               CODE=$?
               if [ $CODE -ne 0 ]; then
                 if [ "${{ inputs.mode }}" = "soft-check" ]; then
