--- a/.github/actions/code-style/trailing-whitespace/action.yml
+++ b/.github/actions/code-style/trailing-whitespace/action.yml
@@ -39,17 +39,17 @@ runs:
                   ERR=1
                 fi
               done < <(grep -nE '[[:blank:]]$' "$file" || true)
-              # Report CRLF
-              while IFS= read -r entry; do
-                path="${entry%%:*}"
-                num="${entry#*:}"
-                if [[ "${{ inputs.mode }}" == "soft-check" ]]; then
-                  echo "::warning file=$path,line=$num::CRLF found in $file:$num"
-                else
-                  echo "::error file=$path,line=$num::CRLF found in $file:$num"
-                  ERR=1
-                fi
-              done < <(grep -n $'\\r$' "$file" || true)
+              # # Report CRLF
+              # while IFS= read -r entry; do
+              #   path="${entry%%:*}"
+              #   num="${entry#*:}"
+              #   if [[ "${{ inputs.mode }}" == "soft-check" ]]; then
+              #     echo "::warning file=$path,line=$num::CRLF found in $file:$num"
+              #   else
+              #     echo "::error file=$path,line=$num::CRLF found in $file:$num"
+              #     ERR=1
+              #   fi
+              # done < <(grep -n $'\\r$' "$file" || true)
             fi
           fi
         done
