--- a/.github/actions/code-style/using-sorter/action.yml
+++ b/.github/actions/code-style/using-sorter/action.yml
@@ -29,7 +29,7 @@ runs:
         ERR=0
 
         # Install dotnet-format
-        dotnet tool install -g dotnet-format || true
+        dotnet tool install -g dotnet-format --version 6.* || true
         export PATH="$HOME/.dotnet/tools:$PATH"
 
         # Function to find the nearest project or solution file
@@ -58,9 +58,9 @@ runs:
             fi
 
             if [[ "${{ inputs.mode }}" == "fix" ]]; then
-              dotnet format analyzers "$project_file" --include "$file"
+              dotnet format --fix-style usings --include "$file" "$project_file"
             else
-              dotnet format analyzers "$project_file" --include "$file" --verify-no-changes
+              dotnet format --fix-style usings --include "$file" "$project_file" --verify-no-changes
               CODE=$?
               if [ $CODE -ne 0 ]; then
                 if [ "${{ inputs.mode }}" = "soft-check" ]; then
