--- a/yak-package/manifest.yml
+++ b/yak-package/manifest.yml
@@ -13,6 +13,6 @@ keywords:
   - "artificial intelligence"
   - "chat"
   - "scripting"
-  - "teaching assistant"
+  - "assistant"
   - "help"
 icon: smarthopper.png
