--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -18,7 +18,7 @@
 # Critical repository files
 /.gitignore         @marc-romu
 /.gitattributes     @marc-romu
-/.windsurf     @marc-romu
+/.windsurf/**       @marc-romu
 *.ps1               @marc-romu
 
 # Critical solution files
