--- a/.github/workflows/release-5-upload-yak.yml
+++ b/.github/workflows/release-5-upload-yak.yml
@@ -144,7 +144,7 @@ jobs:
               Write-Host "Uploading to production Yak server"
           }
           Write-Host "Uploading Windows Yak package: $FilePath"
-          # ./yak.exe push $sourceFlag $FilePath
+          ./yak.exe push $sourceFlag $FilePath
           if ($LASTEXITCODE -ne 0) {
             Write-Host "::error::Failed to upload Windows Yak package"
             exit 1
