--- a/yak-package/manifest.yml
+++ b/yak-package/manifest.yml
@@ -18,7 +18,7 @@ url: https://github.com/architects-toolkit/SmartHopper
 keywords:
   - smarthopper
   - ai
-  - artificial intelligence
+  - artificial-intelligence
   - chat
   - gpt
   - scripting
