--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.3.2-alpha</SolutionVersion>
+    <SolutionVersion>0.3.3-dev.250620</SolutionVersion>
   </PropertyGroup>
 </Project>
