ci: added file and line info for trailing space check

--- a/.github/actions/code-style/trailing-whitespace/action.yml
+++ b/.github/actions/code-style/trailing-whitespace/action.yml
@@ -29,16 +29,14 @@ runs:
               sed -i 's/\r$//' "$file"
             else
               # Report trailing whitespace
-              while IFS= read -r entry; do
-                path="${entry%%:*}"
-                num="${entry#*:}"
+              while IFS=: read -r file_num line_content; do
                 if [[ "${{ inputs.mode }}" == "soft-check" ]]; then
-                  echo "::warning file=$path,line=$num::Trailing whitespace found"
+                  echo "::warning file=$file,line=$file_num::Trailing whitespace found: '$line_content' ($file:$file_num)"
                 else
-                  echo "::error file=$path,line=$num::Trailing whitespace found"
+                  echo "::error file=$file,line=$file_num::Trailing whitespace found: '$line_content' ($file:$file_num)"
                   ERR=1
                 fi
-              done < <(grep -nE '[[:blank:]]$' "$file" || true)
+              done < <(grep -nE '[^[:space:]]+[[:space:]]+$' "$file" | cut -d: -f1,3- || true)
               # # Report CRLF
               # while IFS= read -r entry; do
               #   path="${entry%%:*}"
