--- a/src/SmartHopper.Core/SmartHopper.Core.csproj
+++ b/src/SmartHopper.Core/SmartHopper.Core.csproj
@@ -31,7 +31,7 @@
 
   <!-- Embed the AI Chat resource files in the assembly -->
   <ItemGroup>
-    <EmbeddedResource Include="AI\Chat\Resources\**\*.*" />
+    <EmbeddedResource Include="UI\Chat\Resources\**\*.*" />
   </ItemGroup>
 
   <ItemGroup>
