fix(github): label syncer not working

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -119,19 +119,22 @@
   color: "000"
   description: "Issues related to the DeepSeek provider"
 
-# Feature Labels
-- name: "feature: Settings"
+# Scope Labels
+- name: "scope: Settings"
   color: "000"
   description: "Issues related to the Settings menu"
-- name: "feature: AI Tools"
+- name: "scope: AI Tools"
   color: "000"
   description: "Issues related to the AI tools"
-- name: "feature: Provider Manager"
+- name: "scope: Provider Manager"
   color: "000"
   description: "Issues related to the Provider Manager"
-- name: "feature: UI"
+- name: "scope: Context Manager"
+  color: "000"
+  description: "Issues related to the Context Manager"
+- name: "scope: UI"
   color: "000"
   description: "Issues related to the UI features"
-- name: "feature: Toolbar menu"
+- name: "scope: Toolbar menu"
   color: "000"
   description: "Issues related to the Toolbar menu"
